[tool.poetry]
name = "coding-games-in-python"
version = "0.1.0"
description = ""
authors = ["Alfred Gamulo <alfred.gamulo@gmail.com>"]
readme = "README.md"
packages = [{include = "coding_games_in_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.3.dev8"
pgzero = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
